subscribe to topic

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div id="msg"></div>
     <div id="notis"></div>
     <div id="err"></div>
-    <button>Allo Push Notifications</button>
+    <button>PWA Push Notifications</button>
     <script>
       MsgElem = document.getElementById('msg');
       TokenElem = document.getElementById('token');
@@ -23,7 +23,7 @@
       ErrElem = document.getElementById('err');
       // Initialize Firebase
       // TODO: Replace with your project's customized code snippet
-      var config = {
+      const config = {
         apiKey: 'AIzaSyAuRduOKK2DnRjow0AEOVXxT13xDkK8Vto',
         authDomain: 'angular-pwa-push.firebaseapp.com',
         databaseURL: 'https://angular-pwa-push.firebaseio.com',
@@ -46,21 +46,47 @@
         })
         .then(token => {
           TokenElem.innerHTML = 'token is : ' + token;
+          console.log('subscribe...');
+          subscribeTokenToTopic(token, 'allUsers');
         })
         .catch(err => {
           ErrElem.innerHTML = ErrElem.innerHTML + '; ' + err;
           console.log('Unable to get permission to notify.', err);
         });
 
-      messaging.onMessage(function(payload) {
+      messaging.onMessage(payload => {
         console.log('Message received. ', payload);
         NotisElem.innerHTML = NotisElem.innerHTML + JSON.stringify(payload);
-        //kenng - foreground notifications
         const { title, ...options } = payload.notification;
         navigator.serviceWorker.ready.then(registration => {
           registration.showNotification(title, options);
         });
       });
+
+      function subscribeTokenToTopic(token, topic) {
+        fetch(
+          'https://iid.googleapis.com/iid/v1/' + token + '/rel/topics/' + topic,
+          {
+            method: 'POST',
+            headers: new Headers({
+              Authorization:
+                'key=AAAA2mLgZ5w:APA91bGMB6E2DGYihmbKoJaAmN3m1X5jad0Xm4aUUUeK2UMsExuM3C5bZqbCM9wAs-UCF4CWSyLZwv34l-yQqIK7wceZ37P-BGV3dC1tqjvlA1rzDkbCN8uNfh-F5Bm8dFRNbxNsE04a'
+            })
+          }
+        )
+          .then(response => {
+            if (response.status < 200 || response.status >= 400) {
+              throw 'Error subscribing to topic: ' +
+                response.status +
+                ' - ' +
+                response.text();
+            }
+            console.log('Subscribed to "' + topic + '"');
+          })
+          .catch(error => {
+            console.error(error);
+          });
+      }
     </script>
   </body>
 </html>
