--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
   </head>
   <style>
     div {
-      margin-bottom: 15px;
+      margin-bottom: 20px;
+      font-size: 20px;
     }
   </style>
   <body>
     <div id="token"></div>
     <div id="msg"></div>
-    <div id="notis"></div>
     <div id="err"></div>
     <script src="index.js"></script>
   </body>
