--- a/index.html
+++ b/index.html
@@ -5,12 +5,14 @@
   </head>
   <style>
     div {
-      margin-bottom: 15px;
+      margin-bottom: 20px;
+      font-size: 20px;
     }
   </style>
   <body>
     <div id="token"></div>
-    <div id="err"></div>
+    <div id="message"></div>
+    <div id="error"></div>
     <script src="index.js"></script>
   </body>
 </html>
