cleaned code for tutorial

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   </style>
   <body>
     <div id="token"></div>
-    <div id="msg"></div>
-    <div id="err"></div>
+    <div id="message"></div>
+    <div id="error"></div>
     <script src="index.js"></script>
   </body>
 </html>
